<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.coen268.myproject.MainActivity">
    <item
        android:id="@+id/action_information"
        android:orderInCategory="100"
        android:title="@string/action_information"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_uninstall"
        android:orderInCategory="101"
        android:title="@string/action_uninstall"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_newNote"
        android:orderInCategory="102"
        android:title="@string/action_newNote"
        android:icon="@drawable/ic_border_color_black_24dp"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_newSketch"
        android:orderInCategory="104"
        android:title="@string/action_newSketch"
        android:icon="@drawable/ic_gesture_black_24dp"
        app:showAsAction="always" />



    <item
        android:id="@+id/action_newFolder"
        android:orderInCategory="105"
        android:title="@string/action_newFolder"
        android:icon="@drawable/ic_create_new_folder_black_24dp"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_search"
        android:orderInCategory="106"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always" />

</menu>
